<resources>
  <string name="app_name">TuneFull</string>
  <string name="discovery">Discovery</string>
  <string name="feed">TuneFull Feed</string>
  <string name="profile">User Profile</string>
  <string name="login_failure_message">Unable to Sign-In with provided credentials</string>
  <string name="integration">integrates with</string>
  <string name="spotify_logo">Spotify Logo</string>
  <string name="tunefull_logo">TuneFull Logo</string>
  <string name="login_with_spotify">Login with Spotify</string>
  <string name="connected">Connected to Spotify!</string>
  <string name="playing_music">Playing music</string>
  <string name="clip_feed">Clip feed</string>
  <string name="set_your_genre_mood">Set my genre mood</string>
  <string name="my_clips">My clips</string>
  <string name="friend_requests">Friend requests</string>
  <string name="my_friends">My friends</string>
  <string name="logout">Logout</string>
  <string name="create_a_new_clip">Create a new clip</string>
  <string name="post_clip">Post clip</string>
  <string name="post_clip_message">Post your 30-second clip by selecting the beginning timestamp:</string>
  <string name="select">Select</string>
  <string name="pick_a_genre">Pick a genre:</string>
  <string name="post">Post</string>
  <string name="install_spotify">Please install the Spotify app first.</string>
  <string name="my_follows">My follows</string>
  <string name="relationship_feed">Relationship feed</string>
  <string name="liked_songs">My liked songs</string>
  <string name="clip_posted">Clip posted</string>
  <string name="my_liked_songs">My liked songs</string>
</resources>