<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/constraintLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimary"
  tools:context=".controller.ProfileFragment">

  <TextView
    android:id="@+id/section_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:text="@string/profile"
    android:textSize="@dimen/medium_text_size"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/constraintLayout"
    tools:layout_constraintLeft_creator="1"
    tools:layout_constraintTop_creator="1"/>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/set_genre"
    android:layout_width="@dimen/card_horizontal_dimen"
    android:layout_height="@dimen/card_vertical_dimen"
    android:backgroundTint="@color/colorPrimaryCards"
    android:text="@string/set_your_genre_mood"
    android:textSize="@dimen/medium_text_size"
    android:textAllCaps="false"
    app:icon="@drawable/ic_mood_24"
    app:iconTint="@color/colorPrimaryVariant"
    app:iconSize="@dimen/medium_icon_dimen"
    app:layout_constraintTop_toBottomOf="@id/section_label"
    app:layout_constraintBottom_toTopOf="@id/friend_requests"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/friend_requests"
    android:layout_width="@dimen/card_horizontal_dimen"
    android:layout_height="@dimen/card_vertical_dimen"
    android:backgroundTint="@color/colorPrimaryCards"
    android:text="@string/friend_requests"
    android:textSize="@dimen/medium_text_size"
    android:textAllCaps="false"
    app:icon="@drawable/ic_friend_requests_24"
    app:iconTint="@color/colorPrimaryVariant"
    app:iconSize="@dimen/medium_icon_dimen"
    app:layout_constraintTop_toBottomOf="@id/set_genre"
    app:layout_constraintBottom_toTopOf="@id/my_friends"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/my_friends"
    android:layout_width="@dimen/card_horizontal_dimen"
    android:layout_height="@dimen/card_vertical_dimen"
    android:backgroundTint="@color/colorPrimaryCards"
    android:text="@string/my_friends"
    android:textSize="@dimen/medium_text_size"
    android:textAllCaps="false"
    app:icon="@drawable/ic_friends_24"
    app:iconTint="@color/colorPrimaryVariant"
    app:iconSize="@dimen/medium_icon_dimen"
    app:layout_constraintTop_toBottomOf="@id/friend_requests"
    app:layout_constraintBottom_toTopOf="@id/my_follows"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/my_follows"
    android:layout_width="@dimen/card_horizontal_dimen"
    android:layout_height="@dimen/card_vertical_dimen"
    android:backgroundTint="@color/colorPrimaryCards"
    android:text="@string/my_follows"
    android:textSize="@dimen/medium_text_size"
    android:textAllCaps="false"
    app:icon="@drawable/ic_follow_person_24"
    app:iconTint="@color/colorPrimaryVariant"
    app:iconSize="@dimen/medium_icon_dimen"
    app:layout_constraintTop_toBottomOf="@id/my_friends"
    app:layout_constraintBottom_toTopOf="@id/logout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/logout"
    android:layout_width="@dimen/card_horizontal_dimen"
    android:layout_height="@dimen/card_vertical_dimen"
    android:backgroundTint="@color/colorPrimaryCards"
    android:text="@string/logout"
    android:textSize="@dimen/medium_text_size"
    android:textAllCaps="false"
    app:icon="@drawable/ic_goodbye_24"
    app:iconTint="@color/colorPrimaryVariant"
    app:iconSize="@dimen/medium_icon_dimen"
    app:layout_constraintTop_toBottomOf="@id/my_follows"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/new_clip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    android:layout_gravity="bottom|end"
    android:src="@drawable/ic_tunefull_logo_add_simple"
    android:contentDescription="@string/create_a_new_clip"
    app:tint="@color/colorPrimary"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>